make theme urxvt specific

--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -369,6 +369,12 @@ ws-icon-4 = 5;♞
 ws-icon-default = ♟
 
 label-focused = %icon% %name%
+
+label-focused-foreground = #db924e
+label-focused-underline = #db924e
+
+label-separator = |
+label-separator-padding = 2
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
