add spotify module

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -158,8 +158,8 @@ font-1 = "waffle:size=12;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = i3 sep2 temperatur cpu_bar memory_bar filesystem_bar
-modules-center = title
+modules-left = i3 sep2 temperature cpu_bar memory_bar filesystem_bar
+modules-center = spotify
 modules-right = updates sep network sep volume sep date sep sysmenu
 
 ; The separator will be inserted between the output of each module
