--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -9,6 +9,12 @@
 ;; Created By Aditya Shakya @adi1090x
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/spotify]
+type = custom/script
+interval = 1
+format = <label>
+exec = polybar-spotify
+format-underline = #1db954
 
 [module/checknetwork]
 type = custom/script
