--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,7 @@ exec --no-startup-id nm-applet
 exec --no-startup-id compton
 exec --no-startup-id bash ~/.config/polybar/launch.sh
 exec --no-startup-id nitrogen --restore
+exec --no-startup-id setxkbmap -layout us,bg -variant basic,phonetic
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
