--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -160,7 +160,7 @@ font-1 = "waffle:size=12;2"
 
 modules-left = i3 sep2 temperature cpu_bar memory_bar filesystem_bar
 modules-center = spotify
-modules-right = updates sep network sep volume sep date sep sysmenu
+modules-right = xkeyboard sep updates sep network sep volume sep date sep sysmenu
 
 ; The separator will be inserted between the output of each module
 separator =
