--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -9,6 +9,13 @@
 ;; Created By Aditya Shakya @adi1090x
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/xkeyboard]
+type = internal/xkeyboard
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
 [module/spotify]
 type = custom/script
 interval = 1
